# CUDA_exercises

./: CMakeLists.txt  README.md  compile.sh
src/: array_allocation3D_2D.cu  bandwidth_test.cu  coalescing.cu  hands_on01.cu  matrixMul.cu  matrixMul_shared.cu  matrix_transpose.cu  reduction.cu  remove_if.cu  reverse_shared.cu  saxpy.cu  stream_compact.cu  stream_compression.cu  vecAdd.cu  vecAdd_UnifiedMemory.cu
